--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -17,7 +17,7 @@
                         <button type="submit" class="btn btn-success">Entrar</button>
                     </div>
                     <hr class="mt-5 mb-5">
-                    <p class="text-center">Não tem uma conta? <a href="">Cadastra-se</a> </p>
+                    <p class="text-center">Não tem uma conta? <a routerLink='/cadastrar'>Cadastra-se</a> </p>
                 </div>
             </div>
         </div>
