Criando componentes de tema

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item active pl-3">
-        <img src="https://a-static.mlcdn.com.br/618x463/resina-decorativa-baby-groot-marvel/fingsstore/n8tugneh3/1f18da159a952197bf006854e3c864cc.jpg" alt="Imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
+        <img src="{{foto}}" alt="Imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
       </li>
       <li class="nav-item pl-3">
-        <p class="m-0 font-weight-bold text-white fs-16">Olá, Nome User</p>
+        <p class="m-0 font-weight-bold text-white fs-16">Olá, {{nome}}</p>
       </li>
 
       <li class="nav-item pl-3">
@@ -24,7 +24,7 @@
   </div>
   <ul class="navbar-nav ml-auto d-flex">
     <li class="nav-item pl-3">
-        <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+        <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
       </li>
 
   </ul>
