--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -14,11 +14,11 @@
         <div class="row d-flex justify-content-center mt-4 mb-5">
           <div class="col-md-3">
             <div class="form-group">
-              <input  type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+              <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
             </div>
   
             <div class="d-flex justify-content-center">
-              <button class="btn btn-light" >Cadastrar</button>
+              <button class="btn btn-light" (click)='cadastrar()' >Cadastrar</button>
             </div>
   
           </div>
@@ -46,27 +46,18 @@
                 <th scope="col">#</th>
                 <th scope="col">Primeiro</th>
                 <th scope="col">Último</th>
-                <th scope="col">Nickname</th>
+                
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
+              <tr *ngFor='let tema of listaTemas'>
+                <th >{{tema.id}}</th>
+                <td>{{tema.descricao}}</td>
                 <td>Otto</td>
-                <td>@mdo</td>
+               
               </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-              </tr>
+            
+             
             </tbody>
           </table>
   
